--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,45 @@ bootstrap-icons.min.css">
   <body>
     <%- include('./layout/header'); -%>
 
+<header class="banner-main banner-main-sm">
+      <div class="banner-main-content">
+        <h1 class="display1 display2-md mb-4 mb-md-2 text-neutral-0">URBNSTEP</h1>
+        <p class="h3 h5-md mb-12 mb-md-8 text-neutral-0">Your Step, Your Statement</p>
+        <button type="button" class="btn btn-primary">立即選購</button>
+      </div>
+    </header>
+
 <main>
+  <section class="py-16 py-64 py-md-10  ">
+        <div class="container">
+          <h2 class="display2 h2-md mb-3 mb-md-2 text-center">New Arrival</h2>
+          <h3 class="h2 h4-md mb-32 mb-md-24 text-center">新品上市</h3>
+          <div class="row">
+            <div class="col-6 col-md-2 mb-32 mb-md-8">
+              <img src="/assets/images/new-1.png" alt="new-product1" class="mb-12">
+              <h5 class="h5 h6-md mb-1">Monoverse</h5>
+              <p class="text-md">NT$3,600</p>
+            </div>
+            <div class="col-6 col-md-2 mb-10 mb-md-8">
+              <img src="/assets/images/new-2.png" alt="new-product2" class="mb-12">
+              <h5 class="h5 h6-md mb-1">Monoverse</h5>
+              <p class="text-md">NT$3,600</p>
+            </div>
+            <div class="col-6 col-md-2">
+              <img src="/assets/images/new-3.png" alt="new-product3" class="mb-12">
+              <h5 class="h5 h6-md mb-1">Monoverse</h5>
+              <p class="text-md">NT$3,600</p>
+            </div>
+            <div class="col-6 col-md-2">
+              <img src="/assets/images/new-4.png" alt="new-product4" class="mb-12">
+              <h5 class="h5 h6-md mb-1">Monoverse</h5>
+              <p class="text-md">NT$3,600</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
 <section class="py-64 py-md-40">
 <div class="container">
 <h3 class="h2 h4-md mb-16">熱銷補貨</h3>
@@ -72,10 +110,10 @@ bootstrap-icons.min.css">
 
 <section class="py-64 py-md-40">
   <div class="container">
-<h3 class="h2 h4-md mb-16">依系列選購</h3>
-<div class="row">
-<div class="col-3">
-  <div class="category">
+<h3 class="h2 h4-md mb-16 py-md-10">依系列選購</h3>
+<div class="row section-img">
+<div class="col-3 col-md-2 mb-md-3">
+  <div class="category ">
     <img src="/assets/images/product-6.png" alt="product-6" class="img">
     <div class="category-text">
       <h4 class="h3 h6-md mb-8">URBN RUNNER</h4>
@@ -83,7 +121,7 @@ bootstrap-icons.min.css">
     </div>
   </div>
 </div>
-<div class="col-3">
+<div class="col-3 col-md-2 mb-md-3">
   <div class="category">
     <img src="/assets/images/product.png" alt="product-6" class="img">
     <div class="category-text">
@@ -92,7 +130,7 @@ bootstrap-icons.min.css">
     </div>
   </div>
 </div>
-<div class="col-3">
+<div class="col-3 col-md-2">
   <div class="category">
     <img src="/assets/images/product-9.png" alt="product-6" class="img">
     <div class="category-text">
@@ -101,7 +139,7 @@ bootstrap-icons.min.css">
     </div>
   </div>
 </div>
-<div class="col-3">
+<div class="col-3 col-md-2">
   <div class="category">
     <img src="/assets/images/product-10.png" alt="product-6" class="img">
     <div class="category-text">
@@ -110,12 +148,63 @@ bootstrap-icons.min.css">
     </div>
   </div>
 </div>
-</section>
-<section class="py-64">
-<div class="contanier">
-  <h3 class="h2 md-16">穿搭靈感</h3>
-</div>
-</section>
+
+
+<section class="py-16 mb-12">
+        <div class="container">
+          <h3 class="h2 mb-4 h4-md ">穿搭靈感</h3>
+          <div class="inspiration-row overflow-x-md-auto">
+            <div class="inspiration-col-4">
+              <div class="inspiration-row">
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-1.png" alt="inspiration-1">
+                </div>
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-2.png" alt="inspiration-2">
+                </div>
+                <div class="inspiration-col-12">
+                  <img src="/assets/images/inspiration-3.png" alt="inspiration-3">
+                </div>
+              </div>
+            </div>
+            <div class="inspiration-col-4">
+              <div class="inspiration-row">
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-4.png" alt="inspiration-4">
+                </div>
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-5.png" alt="inspiration-5">
+                </div>
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-6.png" alt="inspiration-6">
+                </div>
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-7.png" alt="inspiration-7">
+                </div>
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-8.png" alt="inspiration-8">
+                </div>
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-9.png" alt="inspiration-9">
+                </div>
+              </div>
+            </div>
+            <div class="inspiration-col-4">
+              <div class="inspiration-row">
+                <div class="inspiration-col-12">
+                  <img src="/assets/images/inspiration-10.png" alt="inspiration-10">
+                </div>
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-11.png" alt="inspiration-11">
+                </div>
+                <div class="inspiration-col-6">
+                  <img src="/assets/images/inspiration-12.png" alt="inspiration-12">
+                </div>
+              </div>
+            </div>
+           </div>
+        </div>
+      </section>
 
 
 </main>
