--- a/pages/product.html
+++ b/pages/product.html
@@ -20,10 +20,10 @@ bootstrap-icons.min.css">
 
 <main>
 <div class="container">
-    <div class="row row-md py-64 py-md-64 py-md-0 ">
+    <div class="row py-16 py-md-6">
         <!---product-->
         
-        <div class="col-12 col-md-3 product-img">
+        <div class="col-7 d-md-none">
             <div class="product-row">
                 <div class="product-col mb-8 py-md-0 ">
                     <img src="/assets/images/image.png" alt="商品圖片1" class="img-fluid">
@@ -53,7 +53,7 @@ bootstrap-icons.min.css">
     </div>
 </div>
     <!---text-->
-        <div class="col-12 col-md-5 product-content">
+        <div class="col-5 col-md-4">
         
 <nav class="mb-12">
         <ol class="d-flex">
